--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,6 +5,9 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+  schedule: 
+    - cron: 10 11 * * *
+    - cron: 00 08 * * *
 
 jobs:
   build:
@@ -22,6 +25,10 @@ jobs:
     - name: Execute Testes
       run: mvn clean test -Dsuite=suite -X
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v4.6.0
+      with:
+        name: Logs
+        path: logs/
+
+   
